# veri-auth

./: .gitignore  Dockerfile  LICENSE  Makefile  PAPER.md  README.md  _CoqProject  auth.opam
src/: .gitignore  Makefile  auth.ml  authenticatable_base.ml  authenticatable_marshal.ml  authenticatable_marshal_401.ml  authenticatable_marshal_fcmod.ml  bench.ml  bench_401.ml  bench_ni.ml  generate_trees.ml  ideal.ml  ideal_401.ml  merkle.ml  merkle_sparse.ml  merkle_sparse_2.ml  plot.py  plot_mtree.py  plot_rb.py  proof.ml  prover.ml  prover_401.ml  prover_buf.ml  prover_buf_magic_state.ml  prover_io.ml  prover_io_401.ml  prover_io_batch.ml  prover_marshal.ml  prover_marshal_401.ml  prover_marshal_fcmod.ml  prover_orig.ml  prover_susp.ml  redblack.ml  test.ml  test_rb.ml  test_sparse.ml  test_tri.ml  test_utils.ml  test_utils_401.ml  test_utils_ni.ml  (+15 more)
src/4.01/: Makefile  README.md  authenticatable_base.ml  authenticatable_marshal.ml  bench_mtree.ml  bench_mtree_upd.ml  bench_rb.ml  bench_rb_look.ml  ideal.ml  prover_io.ml  prover_marshal.ml  prover_rev.ml  redblack.ml  test_utils.ml  utils.ml  verifier.ml  verifier_io.ml  verifier_marshal.ml
src/basic/: Makefile  auth.ml  authenticatable_base.ml  hash.ml  ideal.ml  init.ml  merkle.ml  prover.ml  prover_buf.ml  prover_buf_magic_state.ml  redblack.ml  (+8 more)
src/opt/: Makefile  auth.ml  authenticatable_base.ml  authenticatable_marshal.ml  authenticatable_marshal_fcmod.ml  bench_mtree.ml  bench_rb.ml  dune  dune-project  ideal.ml  prover_marshal.ml  prover_marshal_fcmod.ml  prover_rev.ml  test.ml  test_utils.ml  utils.ml  verifier_io.ml  verifier_io_batch.ml
src/opt/lib/: auth.ml  authenticatable_base.ml  authenticatable_marshal.ml  dune  hash.ml  history.ml  ideal.ml  ideal_eqauth.ml  merkle.ml  merklesq.ml  optiks.ml  prover_io.ml  prover_io_batch.ml  prover_rev_eqauth.ml  prover_rev_eqhash.ml  prover_susp.ml  prover_susp_eqauth.ml  prover_susp_eqhash.ml  test_utils.ml  utils.ml  verifier.ml  verifier_eqauth.ml  verifier_eqhash.ml  verifier_marshal.ml  verifier_susp.ml  verifier_susp_eqauth.ml  verifier_susp_eqhash.ml
src/opt/tests/: dune  test.ml  test_ht.ml  test_msq.ml  test_otks.ml  test_rb.ml  test_vrf.ml
src/opt/vrf/: Cargo.toml  build.rs
src/opt/vrf/src/: dune  lib.rs  vrf.ml  vrf.mli
(+111 files in other folders)
